<resources>
    <string name="app_name">PracticeUD2PMDM</string>
    <string name="ao">ONLINE BETS</string>
    <string name="registro">CHECK IN</string>
    <string name="apuestas">BETS</string>
    <string name="ajustes">SETTINGS</string>
    <string name="sorteo">DRAW</string>
    <string name="nombre">Name</string>
    <string name="email">Email</string>
    <string name="fNac">Birth date (dd/mm/yyyy)</string>
    <string name="validar">VALIDATE</string>
    <string name="volver">RETURN</string>
    <string name="aceptar">ACCEPT</string>
    <string name="futbol">Football</string>
    <string name="baloncesto">Basketball</string>
    <string name="balonmano">Handball</string>
    <string name="tenis">Tennis</string>
    <string name="resultados">SCORES</string>
    <string name="id">ID</string>
    <string name="con1">Contender 1</string>
    <string name="con2">Contender 2</string>
    <string name="res1">Score 1</string>
    <string name="res2">Score 2</string>
    <string name="dApostar">Money to bet</string>
    <string name="guardar">SAVE</string>
    <string name="acerca">About...</string>
    <string name="autor">Author: Juan Ramón Jover Cruz</string>
    <string name="anio">Year: 2017</string>
    <string name="ayuda">Help</string>
    <string name="modoNoche">Night mode:</string>
    <string name="catUsuMail">User and E-Mail</string>
    <string name="catVisual">Visual Options</string>
    <string name="usuPref">User</string>
    <string name="mailPref">E-Mail</string>
</resources>