<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="catUsuario"
        android:title="@string/catUsuMail">


        <EditTextPreference
            android:key="usuarioPref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/usuPref" />

        <EditTextPreference
            android:key="emailPref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:title="@string/mailPref" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="catVisual"
        android:title="@string/catVisual">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="modoNoche"
            android:title="@string/modoNoche" />

    </PreferenceCategory>

</PreferenceScreen>