<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.htcdiurno.practicaud2pmdm.Apuestas">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!---Título de la activity-->
            <TextView
                android:id="@+id/textViewApuestas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/apuestas"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_span="2"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!---Imagen de la Liga Santander-->
            <ImageView
                android:id="@+id/imageFutbol"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ligasantander" />

            <!---Seleccionable de la Liga Santander-->
            <CheckBox
                android:id="@+id/checkFutbol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/futbol" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!---Imagen de la ATP-->
            <ImageView
                android:id="@+id/imageTenis"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/atp" />

            <!---Seleccionable de la ATP-->
            <CheckBox
                android:id="@+id/checktenis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tenis" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!---Imagen de la Liga Endesa-->
            <ImageView
                android:id="@+id/imageBaloncesto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ligaendesa" />

            <!---Seleccionable de la Liga Endesa-->
            <CheckBox
                android:id="@+id/checkBaloncesto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/baloncesto" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!---Imagen de la Liga Asobal-->
            <ImageView
                android:id="@+id/imageBalonmano"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/asobal" />

            <!---Seleccionable de la Liga Asobal-->
            <CheckBox
                android:id="@+id/checkBalonmano"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/balonmano" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!---Botón para aceptar la selección-->
            <Button
                android:id="@+id/aceptaApuestas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar" />

            <!---Botón que cierra la activity-->
            <Button
                android:id="@+id/vuelveApuestas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:onClick="volver"/>

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
