<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.htcdiurno.practicaud2pmdm.Ajustes">

    <!---Contenedor de pestañas-->
    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal"
                android:visibility="visible" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!---Pestaña de DINERO-->
                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!---Texto referente al spinner-->
                    <TextView
                        android:id="@+id/dineroApostar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dApostar"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <!---Spinner con valores de apuesta a elegir-->
                    <Spinner
                        android:id="@+id/spinnerDinero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!---Pestaña de COMBINACIÓN-->
                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/etiquetaPartido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="equipo1-equipo2"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/res1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:text="" />

                        <EditText
                            android:id="@+id/res2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:text="" />
                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <!---Botón que guarda los ajustes-->
    <Button
        android:id="@+id/guardarAjustes"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabHost" />

    <!---Botón que cierra la activity-->
    <Button
        android:id="@+id/volverAjustes"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tabHost"
        android:onClick="volver"/>

    <!---Línea divisoria vertical para la colocación de los botones-->
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>
